<!-- Copyright 2018 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Stamp Collector</string>

    <string name="stamp_title">Stamp Name</string>
    <string name="stamp_pic_desc">Stamp Picture Details</string>
    <string name="stamp_counter">0</string>
    <string name="add_counter_button">+</string>
    <string name="subtract_counter_button">-</string>

    <string name="stamp_update_title">Update Stamp</string>
    <string name="stamp_add_title">Add New Stamp</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>

</resources>
